--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Add a movie to your list</h1>
 
-<%= simple_form_for([@list, @bookmark]) do |f| %>
+<%= simple_form_for [@list, @bookmark] do |f| %>
  <%= f.association :movie %>
  <%= f.input :comment %>
  <%= f.submit %>
