--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -6,3 +6,6 @@
   <% end %>
 </ul>
 <%# <%=%>
+<%= link_to "Back to list", lists_path %>
+<br>
+<%= link_to "Add movie to list", list_bookmarks_new_path(@list) %>
