--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,6 +1,8 @@
 <ul>
   <% @lists.each do |list| %>
-    <li><%= list.name %> - <%= link_to "List details", list_path(list) %></li>
+    <li>
+    <%= list.name %> - <%= link_to "List details", list_path(list) %>
+    </li>
   <% end %>
 </ul>
 <%# <%%>
