--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,8 +1,12 @@
 <h1><%= @list.name %></h1>
+<br>
+<%= cl_image_tag @list.photo.key, height: 300, width: 400, crop: :fill %>
 
 <ul>
   <% @list.movies.each do |movie| %>
-    <li><%= movie.title %></li>
+    <li>
+    <%= movie.title %>
+    </li>
   <% end %>
 </ul>
 <%# <%=%>
